# mlops_project

./: .dockerignore  pyproject.toml  requirements.txt
.github/workflows/: deploy_app.yml  train_model.yml
api/: Dockerfile  main.py  schemas.py
azure-ml/: Dockerfile  compute.yml  environment.yml  job.yml
data/: score_cleaned.csv  train_cleaned.csv
frontend/: Dockerfile  app.py
frontend/templates/: index.html  result.html
k8s/: api-deployment.yml  api-service.yml  frontend-deployment.yml  frontend-service.yml  ingress.yml  namespace.yml
ml/: train.py
ml/artifacts/: scaler.joblib  svc_model.joblib
report/: README.md
scripts/: run_azure_training.py
